WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273655
AX: meter element has inconsistent labels between aria-label and title
https://bugs.webkit.org/show_bug.cgi?id=273655
Summary
AX: meter element has inconsistent labels between aria-label and title
James Craig
Reported
2024-05-02 16:01:33 PDT
AX: meter element has inconsistent labels between aria-label and title Using this test case:
https://bugs.webkit.org/attachment.cgi?id=471244
Labels are missing on the second set (title exposed as AXHelp) but should be exposed as AXTitle/accessiblityLabel.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-02 16:01:50 PDT
<
rdar://problem/127460695
>
Tyler Wilcock
Comment 2
2026-01-19 10:01:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56843
EWS
Comment 3
2026-01-20 08:14:25 PST
Committed
305883@main
(a6c1ed442a54): <
https://commits.webkit.org/305883@main
> Reviewed commits have been landed. Closing PR #56843 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug