AX: meter element has inconsistent labels between aria-label and title https://bugs.webkit.org/show_bug.cgi?id=273655 rdar://127460695

Reviewed by Joshua Hoffman.

This commit includes two fixes for meter element accessibility:

1. The title attribute was incorrectly forced to AccessibilityTextSource::Help,
causing it to be exposed as AXHelp instead of AXDescription. No other browser
did this, and it resulted in suboptimal screenreader experience. Remove the special-case
isMeter() check so meters follow the same title handling as other elements.

2. The valueDescription only showed the gauge region (e.g., "optimal value")
without the actual numeric value. Now when no textual description is available
(i.e. the text inside the meter element), we fall back to the numeric value,
producing output like "80, optimal value" instead of just "optimal value".

* LayoutTests/accessibility/mac/meter-gauge-value-description-expected.txt:
* LayoutTests/accessibility/mac/meter-gauge-value-description.html:
* LayoutTests/accessibility/mac/meter-title-attribute-expected.txt: Added.
* LayoutTests/accessibility/mac/meter-title-attribute.html: Added.
* LayoutTests/platform/mac/accessibility/meter-element-expected.txt:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::helpText const):
* Source/WebCore/accessibility/AccessibilityProgressIndicator.cpp:
(WebCore::AccessibilityProgressIndicator::valueDescription const):

Canonical link: https://commits.webkit.org/305883@main